<build>(all):test

--- a/download.html
+++ b/download.html
@@ -24,7 +24,7 @@
 </head>
 <body>
     <div> <!-- 使用 div 替代 p 作为容器，更符合这种情况 -->
-        <a href="itms-services://?action=download-manifest&url=https://raw.githubusercontent.com/Gsl201600/testIPA/master/DownloadPlist.plist">点击安装</a>
+        <a href="itms-services://?action=download-manifest&url=https://raw.githubusercontent.com/Gsl201600/IPA_OTA/main/DownloadPlist.plist">点击安装MJSDK</a>
         <a href="itms-services://?action=download-manifest&url=https://raw.githubusercontent.com/Gsl201600/testIPA/master/DownloadPlist.plist">点击安装1</a>
     </div>
 </body>
