<build>(all):test

--- a/download.html
+++ b/download.html
@@ -5,27 +5,26 @@
     <title>Install</title>
     <style>
         html, body {
-            height: 100%; /* 使 body 高度填满整个视口 */
-            margin: 0; /* 移除 body 的默认边距 */
+            height: 100%;
+            margin: 0;
         }
         body {
-            font-size: 3em; /* 根据需要调整字体大小 */
-            display: flex; /* 启用 flex 布局 */
-            justify-content: center; /* 水平居中 */
-            align-items: center; /* 垂直居中 */
-            text-align: center; /* 文本居中 */
+            font-size: 3em;
+            display: flex;
+            flex-direction: column; /* 设置主轴方向为垂直 */
+            justify-content: center;
+            align-items: center;
+            text-align: center;
         }
         a {
             color: #69DEDA;
-            text-decoration: none; /* 移除下划线 */
-            margin: 0 5px; /* 调整链接之间的空间 */
+            text-decoration: none;
+            margin: 15px 5px; /* 两个链接分别有 15px 的上下 margin，总共增加 30px 分隔 */
         }
     </style>
 </head>
 <body>
-    <div> <!-- 使用 div 替代 p 作为容器，更符合这种情况 -->
-        <a href="itms-services://?action=download-manifest&url=https://raw.githubusercontent.com/Gsl201600/IPA_OTA/main/DownloadPlist.plist">点击安装MJSDK</a>
-        <a href="itms-services://?action=download-manifest&url=https://raw.githubusercontent.com/Gsl201600/testIPA/master/DownloadPlist.plist">点击安装1</a>
-    </div>
+    <a href="itms-services://?action=download-manifest&url=https://raw.githubusercontent.com/Gsl201600/IPA_OTA/main/DownloadPlist.plist">点击安装MJSDK</a>
+    <a href="itms-services://?action=download-manifest&url=https://raw.githubusercontent.com/Gsl201600/testIPA/master/DownloadPlist.plist">点击安装MJUnitySDK</a>
 </body>
 </html>
