--- a/download.html
+++ b/download.html
@@ -9,22 +9,42 @@
             margin: 0;
         }
         body {
-            font-size: 3em;
+            font-size: 2em;
             display: flex;
-            flex-direction: column; /* 设置主轴方向为垂直 */
+            flex-direction: column;
             justify-content: center;
             align-items: center;
             text-align: center;
         }
         a {
-            color: red;
-            text-decoration: none;
-            margin: 30px 5px;
+            display: inline-block; /* 使链接像块元素一样，可以应用padding等属性 */
+            background-color: red; /* 背景颜色 */
+            color: white; /* 文字颜色 */
+            text-decoration: none; /* 去掉下划线 */
+            padding: 10px 20px; /* 内边距：上下10px，左右20px */
+            border-radius: 10px; /* 圆角边框 */
+            margin: 15px 5px;
+        }
+        .qr-code {
+            width: 150px;
+            margin-bottom: 30px;
+        }
+        .qr-label {
+            font-size: 0.5em;
+            margin-bottom: 5px;
         }
     </style>
 </head>
 <body>
-    <a href="itms-services://?action=download-manifest&url=https://raw.githubusercontent.com/Gsl201600/IPA_OTA/main/DownloadPlist.plist">点击安装MJSDK</a>
-    <a href="itms-services://?action=download-manifest&url=https://raw.githubusercontent.com/Gsl201600/IPA_OTA/main/DownloadPlist2.plist">点击安装MJUnitySDK</a>
+    <div>
+        <a href="itms-services://?action=download-manifest&url=https://raw.githubusercontent.com/Gsl201600/IPA_OTA/main/DownloadPlist.plist">点击安装MJSDK</a>
+        <div class="qr-label">扫描二维码安装</div>
+        <img class="qr-code" src="MJSDK-QR.png" alt="MJSDK QR Code">
+    </div>
+    <div>
+        <a href="itms-services://?action=download-manifest&url=https://raw.githubusercontent.com/Gsl201600/IPA_OTA/main/DownloadPlist2.plist">点击安装MJUnitySDK</a>
+        <div class="qr-label">扫描二维码安装</div>
+        <img class="qr-code" src="MJUnitySDK-QR.png" alt="MJUnitySDK QR Code">
+    </div>
 </body>
 </html>
