<build>(all):test

--- a/download.html
+++ b/download.html
@@ -22,6 +22,7 @@
             width: 100%;
             text-align: center;
             font-weight: bold;
+            margin: 30px 5px;
         }
         a {
             display: inline-block;
