--- a/download.html
+++ b/download.html
@@ -22,7 +22,7 @@
             width: 100%;
             text-align: center;
             font-weight: bold;
-            margin: 30px 5px;
+            margin-bottom: 30px;
         }
         a {
             display: inline-block;
