<build>(all):test

--- a/download.html
+++ b/download.html
@@ -48,14 +48,14 @@
         使用扫码安装，请用苹果原生相机扫码识别
     </div>
     <div>
-        <a href="itms-services://?action=download-manifest&url=https://raw.githubusercontent.com/Gsl201600/IPA_OTA/main/DownloadPlist.plist">点击安装MJSDK</a>
+        <a href="itms-services://?action=download-manifest&url=https://raw.githubusercontent.com/Gsl201600/IPA_OTA/main/DownloadMJSDKDemo.plist">点击安装MJSDKDemo</a>
         <div class="qr-label">扫描二维码安装</div>
-        <img class="qr-code" src="MJSDK-QR.png" alt="MJSDK QR Code">
+        <img class="qr-code" src="MJSDKDemo-QR.png" alt="MJSDKDemo QR Code">
     </div>
     <div>
-        <a href="itms-services://?action=download-manifest&url=https://raw.githubusercontent.com/Gsl201600/IPA_OTA/main/DownloadPlist2.plist">点击安装MJUnitySDK</a>
+        <a href="itms-services://?action=download-manifest&url=https://raw.githubusercontent.com/Gsl201600/IPA_OTA/main/DownloadMJUnitySDKDemo.plist">点击安装MJUnitySDKDemo</a>
         <div class="qr-label">扫描二维码安装</div>
-        <img class="qr-code" src="MJUnitySDK-QR.png" alt="MJUnitySDK QR Code">
+        <img class="qr-code" src="MJUnitySDKDemo-QR.png" alt="MJUnitySDKDemo QR Code">
     </div>
 </body>
 </html>
